codepkg/objects/Trigger_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Application_Config__c</fullName>
        <label>Application Config</label>
        <referenceTo>Application_Config__mdt</referenceTo>
        <relationshipLabel>Trigger Configs</relationshipLabel>
        <relationshipName>Trigger_Configs</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Criteria_Field_API_Name__c</fullName>
        <label>Criteria Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria_Name__c</fullName>
        <label>Criteria Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Record Type</fullName>
                    <default>true</default>
                    <label>Record Type</label>
                </value>
                <value>
                    <fullName>Object Type</fullName>
                </value>
                <value>
                    <fullName>User Profile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Criteria_Operator__c</fullName>
        <label>Criteria Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>==</fullName>
                    <default>true</default>
                    <label>==</label>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Criteria_Value__c</fullName>
        <label>Criteria Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SObject__c</fullName>
        <label>SObject</label>
        <referenceTo>SObject__mdt</referenceTo>
        <relationshipLabel>Trigger Configs</relationshipLabel>
        <relationshipName>Trigger_Configs</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Trigger Config</label>
    <pluralLabel>Trigger Configs</pluralLabel>
</CustomObject>